# bkrl

./: .gitignore  CMakeLists.txt
data/: colors.def_  command_map.json  config.def  entities.def  items.def  key_map.json  keymap.def  loot.def  loot.md  materials.def  texture_map.def  texture_map.json
data/en/: items.def  messages.def
data/ja/: entities.def  items.def  messages.def
data/locale/en/: entities.def  items.def  materials.def_  messages.def
data/locale/ja/: entities.def
data/locale/jp/: entities.def  items.def  messages.def
data/lua/: scripts.lua
include/: algorithm.hpp  assert.hpp  bsp_layout.hpp  combat_types.hpp  command_type.hpp  config.hpp  definitions.hpp  engine_client.hpp  entity.hpp  enum_forward.hpp  enum_map.hpp  exception.hpp  font.hpp  generate.hpp  grid.hpp  gui.hpp  hash.hpp  identifier.hpp  integers.hpp  item.hpp  items.hpp  iterable.hpp  json.hpp  json_forward.hpp  keyboard.hpp  locale.hpp  loot_table.hpp  macros.hpp  math.hpp  messages.hpp  optional.hpp  pch.hpp  player.hpp  random.hpp  random_forward.hpp  render_types.hpp  renderer.hpp  scancode.hpp  scope_exit.hpp  sdl.hpp  (+9 more)
include/detail/: bsp_layout.i.hpp  freetype_text.i.hpp  sdl_application.i.hpp
lib/json11/: json11.cpp  json11.hpp
src/: assert.cpp  bsp_layout.cpp  command_type.cpp  config.cpp  definitions.cpp  engine_client.cpp  entity.cpp  enum_map.cpp  font.cpp  generate.cpp  gui.cpp  item.cpp  items.cpp  json.cpp  keyboard.cpp  loot_table.cpp  main.cpp  math.cpp  messages.cpp  renderer.cpp  sdl.cpp  texture_map.cpp  texture_type.cpp  tile_sheet.cpp  time.cpp  util.cpp
test/: algorithm.t.cpp  bsp_layout.t.cpp  item.t.cpp  keyboard.t.cpp  loot.t.cpp  main.t.cpp  math.t.cpp  random.t.cpp  spatial_map.t.cpp  time.t.cpp
